--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,23 @@
+# Created by http://gitignore.io
+
+### Java ###
 *.class
 
 # Package Files #
 *.jar
 *.war
 *.ear
+
+### Maven ###
+target/
+
+### NetBeans ###
+nbproject/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+build.xml
+build.properties
